--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -1,7 +1,7 @@
-<html>
-    <header><title>SmartNotes!</title></header>
+{% extends "base.html" %}
 
-    <body><h1>Welcome to SmartNotes!</h1>
+{% block content %}
+    <h1>Welcome to SmartNotes!</h1>
     <p>Today is {{today}}</p>
-    </body>
-</html>
+    <a href="{% url 'notes.list' %}" class="btn btn-primary">Check out these smart notes!</a>
+{% endblock %}
