--- a/notes/templates/notes/notes_list.html
+++ b/notes/templates/notes/notes_list.html
@@ -1,15 +1,20 @@
-{% load static % }
+{% extends "base.html" %}
 
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+{% block content %}
+    <h1 class="my-5">These are the notes:</h1>
 
-    </head>
-    <h1>These are the notes:</h1>
+        <div class="row row-cols3 g-2"> 
+            {% for note in notes %}
+            <div class="col"> 
+                <div class="p-3 border">
+                    <a href="{% url 'notes.detail' pk=note.id %}" class="text-dark text-decoration-non">
+                        <h3>{{note.title}}</h3>
+                    </a>
+                    {{note.text|truncatechars:10}}
 
-    <ul> 
-        {% for note in notes %}
-            <li class="note-li">{{note.title}}</li>
-        {% endfor %}
-    </ul>
-</html>
+                </div>
+            </div>
+            {% endfor %}
+
+        </div>
+{% endblock %}
