--- a/notes/templates/notes/notes_form.html
+++ b/notes/templates/notes/notes_form.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 
-<form action="{% url 'notes.new' %}" method='POST'>{% csrf_token %}
+<form method='POST'>{% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary my-5">Submit</button>
+    <a href="{% url 'notes.list' %}" class="btn btn-secondary">Cancel</a>
 </form>
 {% if form.errors %}
 <div class="alert alert-danger my-5">
