--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form method="post">{% csrf_token %}
 {{form.as_p}}
-<input type='submit' class="btn btn-secondary"/m>
+<input type='submit' class="btn btn-secondary"/>
 </form>
 
 {% endblock %}
